--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a href="#">HOME</a></li>
 					<li><a href="pages/adoutme.html">ABOUT ME</a></li>
-					<!-- <li><a href="#">???</a></li> -->
+					<li><a href="pages/games/games.html">???</a></li>
 					<li><a href="#CONTACTS">CONTACTS</a></li>
 				</ul>
 				</div>
@@ -116,7 +116,7 @@
 				<li><span class="box_header">NAVIGATION:</span></li>
 				<li><a href="#">HOME</a></li>
 				<li><a href="pages/adoutme.html">ABOUT ME</a></li>
-<!-- 				<li><a href="#">???</a></li> -->
+				<li><a href="pages/games/games.html">???</a></li>
 			</ul>
 			</div>
 			<div class="footer_box last_box">
