--- a/pages/adoutme.html
+++ b/pages/adoutme.html
@@ -40,7 +40,24 @@
 			</div>
 			<div class="box img"><img src="../img/about_me/myAvatar.png"></div>
 		</div>
-		
+	<div class="wrapperSliderContent content_desk">
+		<div class="slider_skills_text content_desk">My skills</div>
+		<div class="content_desk">
+			<div class="btn_slider left"><img src="../img/slider/left.png"></div>
+				<div class="slider content_desk">
+					<div class="string content_desk">
+						<img src="../img/myskills/bootstrap.png">
+						<img src="../img/myskills/php.png">
+						<img src="../img/myskills/html.png">
+						<img src="../img/myskills/js.png">
+						<img src="../img/myskills/photoshop.png">
+						<img src="../img/myskills/css.png">
+						<img src="../img/myskills/prepros.png">
+						<img src="../img/myskills/scss.png">
+					</div>
+				</div>
+			<div class="btn_slider right"><img src="../img/slider/right.png"></div>
+		</div>
 	</div>
 </main>
 	<!------------------------footer---------------------------->
@@ -68,6 +85,7 @@
 	</div>
 	</footer>
 </div>
+<script src="../js/about_me/slider.js"></script>
 
 </body>
 </html>
