--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 				<div class="feedback_box">
 					<form action="mailer/mail.php" method="POST">
 						<div class="user_field">
-						<input type="text" name="user_name" placeholder="Ваше Имя" class="field">
+						<input type="text" name="user_name" required placeholder="Ваше Имя" class="field">
 						</div>
 						<div class="user_field">
-						<input type="email" name="user_email" placeholder="Ваш email" class="field">
+						<input type="email" name="user_email" required placeholder="Ваш email" class="field">
 						</div>
 						<div class="user_field">
-						<input type="tel" name="user_phone" placeholder="Контактный телефон" class="field">
+						<input type="tel" name="user_phone" required placeholder="Контактный телефон" class="field">
 						</div>
 						<div class="user_add_info user_field">
 						<textarea name="user_add_info" placeholder="Дополнительная информация" class="big_field"></textarea>
