--- a/pages/adoutme.html
+++ b/pages/adoutme.html
@@ -34,7 +34,7 @@
 				<span>Досье №</span>
 				<ul>
 					<li>Имя: Иван</li>
-					<li>Дата рождения: 1992 г.</li>
+					<li>Дата рождения: 2005.</li>
 					<li>Профессиональная деятельность: <h1>HTML верстальщик</h1></li>
 				</ul>
 			</div>
